Added Gaussian Blur Template
Gaussian blur is not fully implemented. Added the ability to make a circle using points, instead of a polygon.

--- a/impressionist.vcxproj.filters
+++ b/impressionist.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="ScatteredUnfilledCircleBrush.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GaussianBlur.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bitmap.h">
@@ -105,6 +108,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ScatteredUnfilledCircleBrush.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GaussianBlur.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
